Initial commit of JuiceHaven project

--- a/coc/templates/account/login.html
+++ b/coc/templates/account/login.html
@@ -29,7 +29,7 @@
                                                     <button type="submit" class="btn btn-google btn-user btn-block">{% trans "Login" %}</button>
                                                 </form>
                                                 <br>
-                                                    <a href="{% provider_login_url 'google' %}" class="btn btn-google btn-user btn-block"><i class="bi bi-google"></i>Login with Google</a>
+                                                    <a href="{% provider_login_url 'google' %}" class="btn btn-google btn-user btn-outline btn-block"><i class="bi bi-google"></i>Login with Google</a>
 
 
                                                 <p>
