--- a/coc/templates/accounts/account_settings_and_privacy.html
+++ b/coc/templates/accounts/account_settings_and_privacy.html
@@ -158,7 +158,15 @@
         <div id="security">We value your</div>
 
 
-        <div id="privacy">Set private information</div>
+        <div id="privacy">
+            <div>
+                <h4>set private information</h4>
+                <fieldset>
+                    this is the field set section
+                </fieldset>
+
+            </div>
+        </div>
 
 
         <div id="connectedApps">
