--- a/coc/templates/admin/base_site.html
+++ b/coc/templates/admin/base_site.html
@@ -3,7 +3,7 @@
 
 {% block branding %}
   <h1 id="head px-3">
-    <img src="{% static 'img/crout.webp' %}" alt="YouTube" height="50" width="100" class="brand_img">
+    <img src="{% static 'img/crout.webp' %}" alt="Crout" height="50" width="100" class="brand_img">
   </h1>
 {% endblock %}
 {% block extrastyle %}
