--- a/coc/templates/dashboard/bootstrap-icons.html
+++ b/coc/templates/dashboard/bootstrap-icons.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Document Title, Description, and Author -->
-  <title>Console - Free Bootstrap Admin Template</title>
-  <meta name="description" content="Console is a Free Bootstrap Admin Template.">
-  <meta name="author" content="BootstrapBrain">
+  <title>Crout Products</title>
+  <meta name="description" content="crout comes with various products, enjoy ">
+  <meta name="author" content="ChristianOutreach">
 
   <!-- Favicon and Touch Icons -->
   <link rel="icon" type="image/png" sizes="512x512" href="{% static 'img/crout.webp' %}">
@@ -39,12 +39,12 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1 class="h4">Bootstrap Icons</h1>
+            <h1 class="h4">Crout Products</h1>
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb m-0 fs-7">
                 <li class="breadcrumb-item"><a class="link-primary text-decoration-none" href="{% url 'dashboard:dashboard' %}">Home</a></li>
-                <li class="breadcrumb-item">Icons</li>
-                <li class="breadcrumb-item active" aria-current="page">Bootstrap Icons</li>
+                <li class="breadcrumb-item">Products</li>
+                <li class="breadcrumb-item active" aria-current="page">Crout Products</li>
               </ol>
             </nav>
           </div>
@@ -61,18 +61,18 @@
               <div class="col-12">
                 <div class="card widget-card border-light shadow-sm">
                   <div class="card-header bg-transparent p-4 border-light-subtle">
-                    <h5 class="card-title widget-card-title m-0">Bootstrap Icons</h5>
+                    <h5 class="card-title widget-card-title m-0">Crout Products</h5>
                   </div>
                   <div class="card-body p-4">
-                    <p>Free, high quality, open source icon library with over 2,000 icons. Include them anyway you like—SVGs, SVG sprite, or web fonts.</p>
-                    <p><a class="text-decoration-none" href="https://icons.getbootstrap.com/" target="_blank">Visit Project Page</a></p>
+                    <p>Enjoy most of our free products to make your christian walk experience better with Crout</p>
+                    <p><a class="text-decoration-none" href="https://icons.getbootstrap.com/" target="_blank">show all products</a></p>
                   </div>
                 </div>
               </div>
               <div class="col-12">
                 <div class="card widget-card border-light shadow-sm">
                   <div class="card-header bg-transparent p-4 border-light-subtle">
-                    <h5 class="card-title widget-card-title m-0">Sample Icons</h5>
+                    <h5 class="card-title widget-card-title m-0">Sample Products</h5>
                   </div>
                   <div class="card-body p-4">
                     <div class="row gy-3">
@@ -310,7 +310,7 @@
       <div class="row">
         <div class="col">
           <div class="py-3">
-            Built by <a href="https://bootstrapbrain.com/" class="link-secondary text-decoration-none">BootstrapBrain</a> with <span class="text-accent">&#9829;</span>
+            <p>Christian Outreach Church </p>
           </div>
         </div>
       </div>
