--- a/coc/templates/videos/video_history.html
+++ b/coc/templates/videos/video_history.html
@@ -1,6 +1,6 @@
 {% extends 'base_dashboard.html' %}
 {% block content %}
-
+<div class="container">
     <h1>My Video History</h1>
     <ul>
         {% for history_entry in video_history %}
@@ -11,5 +11,6 @@
             <li>No video history yet.</li>
         {% endfor %}
     </ul>
+</div>
 {% endblock %}
 
